[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/audio/music/Memory Fun.ogg" type="AudioStream" id=1]
[ext_resource path="res://src/autoload/AudioManager.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/sfx/Victory.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/sfx/SFX_01.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/sfx/SFX_02.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/sfx/SFX_03.ogg" type="AudioStream" id=6]

[node name="AudioManager" type="Node"]
script = ExtResource( 2 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="VictorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="SFX_01" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SFX_02" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="SFX_03" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
